Add support to fetch stock data from api and render on chart

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="chartCard">
         <div class="chartBox">
             <canvas id="myChart"></canvas>
+            <p id="chartVersion"></p>
         </div>
     </div>
 
