Add support for multi time frame data

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
                 <canvas id="overlayCanvas"></canvas>
             </div>
             <p id="chartVersion"></p>
+            <div class="button-group">
+                <button class="time-frame-btn" id="dayTimeButton" data-timeframe="daily">1 Day</button>
+                <button class="time-frame-btn" id="weekTimeButton" data-timeframe="weekly">1 Week</button>
+                <button class="time-frame-btn" id="monthTimeButton" data-timeframe="monthly">1 Month</button>
+              </div>
+              
         </div>
     </div>
 
