--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.3.0/luxon.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@3.0.1/dist/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@0.2.1"></script>
-    <script src="js/chartjs-chart-financial.js.js"></script>
+    <script src="js/chartjs-chart-financial.js"></script>
     <script type="module" src="js/StockData.js"></script>
 </head>
 
@@ -19,7 +19,8 @@
         <div class="chartBox">
             <div class="inputBox">
                 <label for="symbolInput">Enter stock symbol:</label>
-                <input type="text" id="symbolInput" name="symbolInput">
+                <input list="autocompleteDropdown" id="symbolInput" name="symbolInput">
+                <datalist id="autocompleteDropdown"></datalist>
                 <button id="symbolSubmitBtn">Submit</button>
             </div>
             
@@ -36,7 +37,7 @@
               
         </div>
     </div>
-
+    <script type="module" src="js/Constants.js"></script>
     <script type="module" src="js/ChartRender.js"></script>
     <script type="module" src="js/UpdateChart.js"></script>
     <script src="js/LineDraw.js"></script>
