--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.3.0/luxon.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@3.0.1/dist/chart.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@3.6.0/dist/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@1.1.1/dist/chartjs-plugin-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@0.2.1"></script>
     <script src="js/chartjs-chart-financial.js"></script>
     <script type="module" src="js/StockData.js"></script>
@@ -26,7 +27,7 @@
             
             <div class="chart-container">
                 <canvas id="chartCanvas"></canvas>
-                <canvas id="overlayCanvas"></canvas>
+                <!-- <canvas id="overlayCanvas"></canvas> -->
             </div>
             <p id="chartVersion"></p>
             <div class="button-group">
